# spotify-helper

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: get_playlists.py  main.py
app/webserver/: main.py
scripts/: get_playlists.py  install.bat  install.sh
spotifyhelper/: __main__.py  albums.py  auth.py  colours.py  main.py  playlists.py  structs.py  user.py  webserver.py
