[tool.poetry]
name = "spotifyhelper"
version = "0.1.0"
description = "Useful stuff for Spotify"
authors = ["Ben Watkins"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
windows-curses = "^2.3.2"

[tool.poetry.scripts]
spotifyhelper = "spotifyhelper.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
